# Starling

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: claude-model-switching.md  codex-app-server-status.md  codex-deepseek-vscode.md  data-path-design.md  glm-personality-starling-thread.md
npm/: package.json
rust/: Cargo.toml
rust/src/: cli.rs  constants.rs  core.rs  main.rs  types.rs
rust/src/commands/: catalog.rs  config_cmd.rs  diagnose.rs  mcp.rs  mod.rs  model.rs  monitor.rs  pin.rs  project.rs  resume.rs  run.rs  session.rs  status.rs
rust/src/core/: catalog_resolver.rs  discovery.rs  format.rs  fs_utils.rs  id.rs  mcp_config.rs  model_config.rs  osc_state.rs  process_map.rs  process_metrics.rs  runs.rs  session.rs  session_display.rs  session_index.rs  session_metrics.rs  store.rs
rust/src/diagnose/: format.rs  mod.rs  prompt.rs  tasks.rs
scripts/: build.sh  install-agent-skills.js  stage_npm_packages.sh
src/: constants.ts  index.ts  types.ts
tests/: codexChatProxy.test.ts  codexDefaultGuard.test.ts  codexProvider.test.ts  configPaths.test.ts  constants.test.ts  diagnoseCommand.test.ts  discovery.test.ts  modelCommand.test.ts  monitorCommand.test.ts  pricing.test.ts  processMap.test.ts  processMetrics.test.ts  projectCommand.test.ts  runCommand.test.ts  runs.test.ts  session.test.ts  sessionCommand.test.ts  sessionIndex.incremental.test.ts  sessionIndex.lookup.test.ts  sessionIndex.test.ts  sessionMetrics.test.ts  spaceCommand.test.ts  (+1 more)
(+62 files in other folders)
