[package]
name = "starling"
version = "0.1.3"
edition = "2021"
description = "Agent session manager — discover, pin, and organize AI coding sessions"
license = "MIT"

[[bin]]
name = "starling"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
colored = "2"
comfy-table = "7"
dirs = "5"
walkdir = "2"
crossterm = "0.27"
libc = "0.2"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
